--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,23 +1,22 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
 @tailwind base;
 @tailwind components;
-@font-face{
-   font-family: LemonMilkbold;
-   src: local('LemonMilkbold') url('../fonts/LemonMilk/LemonMilkbold.otf') format('opentype');
-}
-@font-face{
-   font-family: LemonMilk;
-   src: local('LemonMilkbold') url('../fonts/LemonMilk/LemonMilk.otf') format('opentype');
-}
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
+@layer base{
+   @font-face{
+      font-family: LemonMilkbold;
+      src: url('../fonts/LemonMilk/LemonMilkbold.otf');
+   }
+   @font-face{
+      font-family: LemonMilk;
+      src: url('../fonts/LemonMilk/LemonMilk.otf');
+   }
+}
 *{
    padding: 0;
    margin: 0;
-   font-family: "LemonMilk";
 }
 @-moz-document url-prefix() {
-
-   /* Disable scrollbar Firefox */
    html {
        scrollbar-width: none;
    }
