--- a/src/css/Header.module.css
+++ b/src/css/Header.module.css
@@ -11,3 +11,11 @@
       width: 30vw;
    }
 }
+.stylit{
+   width: 0;
+}
+@media screen and (min-width:1280px) {
+   .stylit{
+      min-width: 9%;
+   }
+}
