--- a/src/css/Header.module.css
+++ b/src/css/Header.module.css
@@ -19,3 +19,10 @@
       min-width: 9%;
    }
 }
+.hoverinbac:hover{
+   border-bottom: 2px solid #F5C470;
+   border-top-left-radius: 0.5px;
+   border-bottom-left-radius: 0.5px;
+   border-top-right-radius: 0.5px;
+   border-bottom-right-radius: 0.5px;
+}
