--- a/src/css/team.module.css
+++ b/src/css/team.module.css
@@ -1,9 +1,9 @@
 .padit {
-  padding-top: 4vh;
+  padding-top: 3.5vh;
 }
 @media screen and (max-height: 900px) and (min-height: 700px) {
   .padit {
-    padding-top: 4.8vh;
+    padding-top: 4vh;
   }
 }
 @media screen and (max-height: 700px) and (min-height: 400px) {
@@ -17,7 +17,7 @@
   }
 }
 .heightfix {
-  height: 110px;
+  height: 160px;
 }
 .box {
   width: 200px;
@@ -25,21 +25,6 @@
 }
 .card {
   overflow: hidden;
-}
-.lanterns {
-}
-/* .line {
-  position: absolute;
-  width: 485.49px;
-  height: 1.76px;
-  left: 99.14px;
-  top: 619.5px;
-
-  transform: rotate(-90.21deg);
-} */
-.lanterns img {
-  width: 70px;
-  height: 200px;
 }
 @media screen and (max-width: 768px) {
   .leftit {
@@ -52,10 +37,24 @@
   border-image: url("../images/Goldenbox.png") 30 stretch;
 }
 .rightcard {
-  transform: scale(0.35);
+  transform: scale(0.5);
   transform-origin: top right;
 }
 .lefttcard {
-  transform: scale(0.35);
+  transform: scale(0.5);
   transform-origin: top left;
+}
+.widthis {
+  width: 50px;
+  height: 200px;
+}
+@media screen and (max-width: 540px) {
+  .widthis {
+    width: 20px;
+    height: 100px;
+  }
+}
+.initialcardop {
+  transform: scale(0.75);
+  transform-origin: top 0;
 }
