--- a/src/css/events.module.css
+++ b/src/css/events.module.css
@@ -1,51 +1,53 @@
-.padit{
-    padding-top: 4vh;
+.padit {
+  padding-top: 4vh;
 }
-@media screen and (max-height:900px) and (min-height:700px) {
-    .padit{
-        padding-top: 4.8vh;
-    }
+@media screen and (max-height: 900px) and (min-height: 700px) {
+  .padit {
+    padding-top: 4.8vh;
+  }
 }
-@media screen and (max-height:700px) and (min-height:400px) {
-    .padit{
-        padding-top: 2.8vh;
-    }
+@media screen and (max-height: 700px) and (min-height: 400px) {
+  .padit {
+    padding-top: 2.8vh;
+  }
 }
-@media screen and (min-width:900px) {
-    .padit{
-        padding-top: 5.8vh;
-    }
+@media screen and (min-width: 900px) {
+  .padit {
+    padding-top: 5.8vh;
+  }
 }
-.border{
-     /* padding: 15px;  */
-    border: 40px solid transparent;
-    border-image: url('../images/events/GoldenBox8.png') 100 ;
+.button {
+  background: url(../images/events/Gradient.png);
+  padding: 0.8rem;
+  border-radius: 5px;
+  width: 100%;
+  bottom: 100%;
+  font-size: 1.5rem;
+  font-weight: 800;
 }
-.button{
-    background: url(../images/events/Gradient.png);
-   padding: 0.8rem;
-   border-radius: 5px;
-   width: 100%;
-   bottom: 100%;
-   font-size: 1.5rem;
-   font-weight: 800;
-   
+.imageBox {
+  /* min-height: 300px; */
+  width: 100%;
 }
-.imageBox{
-    min-height: 300px;
-    width: 100%;
+.textBox {
+  /* height: 50%; */
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  margin-top: 2%;
 }
-.textBox{
-    /* height: 50%; */
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    margin-top: 2%;
+#Culti {
+  font-size: xx-large;
+  background: rgba(196, 196, 196, 0.22);
 }
-#Culti{
-    font-size: xx-large;
-    background:  rgba(196, 196, 196, 0.22);
+#Techy {
+  font-size: xx-large;
 }
-#Techy{
-    font-size: xx-large;
+.border {
+  padding: 10px; 
+  margin: 10px;
+  border: 4px solid transparent;
+  border-image: url("../images/Goldenbox.png") 100 stretch;
+  /* border: solid #000;
+border-width: 0 1px; */
 }
