--- a/src/css/schedule.module.css
+++ b/src/css/schedule.module.css
@@ -1,5 +1,5 @@
 .border{
   border-radius: 25px;
-  border: 50px solid transparent;
-  border-image: url("../images/Box.png") 250;
+  border: 60px solid transparent;
+  border-image: url("../images/Schedule.png") 360;
 }
