--- a/src/css/events.module.css
+++ b/src/css/events.module.css
@@ -47,7 +47,7 @@
   padding: 10px; 
   margin: 10px;
   border: 4px solid transparent;
-  border-image: url("../images/Goldenbox.png") 100 stretch;
+  border-image: url("../images/Goldenbox.png") 100 stretch;g
   /* border: solid #000;
 border-width: 0 1px; */
 }
