--- a/src/css/Homepage1.module.css
+++ b/src/css/Homepage1.module.css
@@ -118,4 +118,18 @@
     background-size: 100% 100%;
     background-repeat: no-repeat;
   }
+  .chakra{
+    width: 120px;
+  }
+  .zorae {
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    margin-left: 0vw;
+    margin-right: 0vw;
+    
+    max-height: 100vh;
+    display: flex;
+    justify-content: center;
+  }
 }
