added first two slides in Homepage

--- a/src/css/Homepage1.module.css
+++ b/src/css/Homepage1.module.css
@@ -132,4 +132,10 @@
     display: flex;
     justify-content: center;
   }
+  .zorae img{
+    height: 70vh;
+    width: auto;
+    margin: auto;
+    max-width: 100vw;
+  }
 }
