--- a/src/css/Homepage2.module.css
+++ b/src/css/Homepage2.module.css
@@ -1,49 +1,57 @@
-.imagebackgr{
-    /* background: url('../images/Homepage/window_webcopy.png');
+.imagebackgr {
+  /* background: url('../images/Homepage/window_webcopy.png');
     background-position: center;
     background-repeat: no-repeat;
     background-size: 100% 100%;
     z-index: 20; */
-    background: linear-gradient(180deg, #170735 -10.41%, #943066 65.44%, #F5C470 122.95%);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    z-index: 20;
-    width: 100vw;
-    height: 100vh;
+  z-index: 20;
+  width: 100vw;
+  height: 100vh;
+}
+.Slide {
+  background: linear-gradient(
+    180deg,
+    #170735 -10.41%,
+    #943066 65.44%,
+    #f5c470 122.95%
+  );
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 .img {
-    width: 4vw;
-    max-height: 80vh;
-    filter: contrast(4);
-    min-height: 300px;
+  width: 4vw;
+  max-height: 80vh;
+  filter: contrast(4);
+  min-height: 300px;
 }
 .img1 {
-    width: 4vw;
-    filter: contrast(4);
-    transform: scale(0.9);
-    min-height: 300px;
+  width: 4vw;
+  filter: contrast(4);
+  transform: scale(0.9);
+  min-height: 300px;
 }
 .img2 {
-    width: 4vw;
-    filter: contrast(4);
-    min-height: 300px;
-}.img3 {
-    width: 4vw;
-    filter: contrast(4);
-    transform: scale(0.85);
-    min-height: 300px;
+  width: 4vw;
+  filter: contrast(4);
+  min-height: 300px;
+}
+.img3 {
+  width: 4vw;
+  filter: contrast(4);
+  transform: scale(0.85);
+  min-height: 300px;
 }
 .img4 {
-    width: 4vw;
-    filter: contrast(3);
-    transform: scale(0.75);
-    min-height: 300px;
+  width: 4vw;
+  filter: contrast(3);
+  transform: scale(0.75);
+  min-height: 300px;
 }
-.zoomimg{
-    z-index: 3;
-    width: 100vw;
-    transform: scale(0.8);
-    transform-origin: bottom center;
+.zoomimg {
+  z-index: 3;
+  width: 100vw;
+  transform: scale(0.8);
+  transform-origin: bottom center;
 }
-.zInde{
-    z-index: -1;
+.zInde {
+  z-index: -1;
 }
