--- a/src/css/events.module.css
+++ b/src/css/events.module.css
@@ -48,6 +48,8 @@
   margin: 10px;
   border: 4px solid transparent;
   border-image: url("../images/Goldenbox.png") 100 stretch;
+  min-height: 500px;
+ 
   /* border: solid #000;
 border-width: 0 1px; */
 }
