--- a/src/css/Homepage2.module.css
+++ b/src/css/Homepage2.module.css
@@ -15,7 +15,7 @@
     #943066 65.44%,
     #f5c470 122.95%
   );
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  /* box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); */
 }
 .img {
   width: 4vw;
