--- a/src/css/Homepage2.module.css
+++ b/src/css/Homepage2.module.css
@@ -1,9 +1,8 @@
 .imagebackgr {
-  /* background: url('../images/Homepage/window_webcopy.png');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    z-index: 20; */
+  background: url("../images/Homepage/window_webcopy.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
   z-index: 20;
   width: 100vw;
   height: 100vh;
@@ -47,7 +46,7 @@
   min-height: 300px;
 }
 .zoomimg {
-  z-index: 3;
+  z-index: 20;
   width: 100vw;
   transform: scale(0.7);
   transform-origin: bottom center;
@@ -55,64 +54,64 @@
 .zInde {
   z-index: -1;
 }
-.texthere{
-    max-width:300px;
-    z-index: 30;
+.texthere {
+  max-width: 300px;
+  z-index: 30;
 }
-@media screen and (min-width:1360px) {
-    .texthere{
-        max-width: 380px;
-    }
+@media screen and (min-width: 1360px) {
+  .texthere {
+    max-width: 380px;
+  }
 }
-.rotateclock{
+.rotateclock {
   animation: rotateclock 0.8s ease-in-out 0.1s infinite;
 }
-.rotateanti{
+.rotateanti {
   animation: rotateanti 0.8s ease-in-out 0.1s infinite;
 }
 @keyframes rotateclock {
-  0%{
+  0% {
     transform: rotate(0deg);
   }
-  10%{
+  10% {
     transform: rotate(5deg);
   }
-  30%{
+  30% {
     transform: rotate(15deg);
   }
-  50%{
+  50% {
     transform: rotate(20deg);
   }
-  70%{
+  70% {
     transform: rotate(25deg);
   }
-  90%{
-      transform: rotate(35deg);
+  90% {
+    transform: rotate(35deg);
   }
-  100%{
+  100% {
     transform: rotate(40deg);
   }
 }
 @keyframes rotateanti {
-  0%{
+  0% {
     transform: rotate(-0deg);
   }
-  10%{
+  10% {
     transform: rotate(-5deg);
   }
-  30%{
+  30% {
     transform: rotate(-15deg);
   }
-  50%{
+  50% {
     transform: rotate(-20deg);
   }
-  70%{
+  70% {
     transform: rotate(-25deg);
   }
-  90%{
-      transform: rotate(-35deg);
+  90% {
+    transform: rotate(-35deg);
   }
-  100%{
+  100% {
     transform: rotate(-40deg);
   }
 }
