--- a/src/css/events.module.css
+++ b/src/css/events.module.css
@@ -49,6 +49,7 @@
   border: 4px solid transparent;
   border-image: url("../images/Goldenbox.png") 100 stretch;
   min-height: 500px;
+  max-width: 900px;
  
   /* border: solid #000;
 border-width: 0 1px; */
