added cdn for Home page

--- a/src/css/Homepage1.module.css
+++ b/src/css/Homepage1.module.css
@@ -16,7 +16,7 @@
   height: 60vh;
   margin-left: 15vw;
   margin-top:20vh;
-  background: url('../images/Homepage/box_copy.png');
+  background: url('https://ik.imagekit.io/sai1975d/Homepage/box_copy_IAYila0Lk.png?ik-sdk-version=javascript-1.4.3&updatedAt=1646162345158');
   opacity: 0.8;
   background-size: 100% 100%;
   background-repeat: no-repeat;
@@ -118,7 +118,7 @@
     display: flex;
     margin:8vh 12vw;
     width: auto;
-    background: url('../images/Homepage/mobile_box.png');
+    background: url('https://ik.imagekit.io/sai1975d/Homepage/mobile_box_oPKJwXiCV.png?ik-sdk-version=javascript-1.4.3&updatedAt=1646162347548');
     opacity: 0.8;
     background-size: 100% 100%;
     background-repeat: no-repeat;
