--- a/src/css/Homepage2.module.css
+++ b/src/css/Homepage2.module.css
@@ -62,6 +62,16 @@
     max-width: 380px;
   }
 }
+@media screen and (min-width: 300px) and (max-width:768px) {
+  .texthere {
+    max-width: 230px;
+  }
+}
+@media screen and (min-width:260px) and (max-width:300px) {
+  .texthere{
+    max-width: 180px;
+  }
+}
 .rotateclock {
   animation: rotateclock 0.8s ease-in-out 0.1s infinite;
 }
