--- a/src/css/team.module.css
+++ b/src/css/team.module.css
@@ -32,7 +32,7 @@
   }
 }
 .borderitim {
-  padding: 15px;
+  /* padding: 15px; */
   border: 3.5px solid transparent;
   border-image: url("../images/Golden Box.png") 30 stretch;
 }
@@ -66,3 +66,10 @@
   transform: scale(0.75);
   transform-origin: top 0;
 }
+.cardcoord {
+  transform: scale(0.7);
+  transform-origin: top ;
+  margin:  0px auto;
+}
+
+
