--- a/src/css/sponsors.module.css
+++ b/src/css/sponsors.module.css
@@ -2,7 +2,6 @@
   background: #cd846c;
 }
 .flipimageit {
-  /* transform: scaleY(-1); */
   margin: auto;
 }
 
@@ -11,8 +10,8 @@
 *:after {
   margin: 0;
   padding: 0;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
+  /* -webkit-box-sizing: border-box; */
+  /* -moz-box-sizing: border-box; */
   box-sizing: border-box;
 }
 .main-title {
@@ -57,15 +56,14 @@
 .content .contentOverlay {
   background: rgba(0, 0, 0, 0.7);
   position: absolute;
-  height: 99%;
   width: 100%;
   left: 0;
   top: 0;
   bottom: 0;
   right: 0;
   opacity: 0;
-  -webkit-transition: all 0.4s ease-in-out 0s;
-  -moz-transition: all 0.4s ease-in-out 0s;
+  /* -webkit-transition: all 0.4s ease-in-out 0s; */
+  /* -moz-transition: all 0.4s ease-in-out 0s; */
   transition: all 0.4s ease-in-out 0s;
 }
 
@@ -81,17 +79,16 @@
 .contentDetails {
   position: absolute;
   text-align: center;
-  padding-left: 1em;
-  padding-right: 1em;
+
   width: 100%;
   top: 50%;
   left: 50%;
   opacity: 0;
-  -webkit-transform: translate(-50%, -50%);
-  -moz-transform: translate(-50%, -50%);
+  /* -webkit-transform: translate(-50%, -50%); */
+  /* -moz-transform: translate(-50%, -50%); */
   transform: translate(-50%, -50%);
-  -webkit-transition: all 0.3s ease-in-out 0s;
-  -moz-transition: all 0.3s ease-in-out 0s;
+  /* -webkit-transition: all 0.3s ease-in-out 0s; */
+  /* -moz-transition: all 0.3s ease-in-out 0s; */
   transition: all 0.3s ease-in-out 0s;
 }
 
