--- a/src/css/events.module.css
+++ b/src/css/events.module.css
@@ -24,6 +24,10 @@
   bottom: 100%;
   font-size: 1.5rem;
   font-weight: 800;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  max-width: 300px;
 }
 .imageBox {
   /* min-height: 300px; */
@@ -57,4 +61,9 @@ border-width: 0 1px; */
 }
 .gridcont{
   margin: 80px 0px;
+}
+.merchbutton{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
