--- a/src/css/events.module.css
+++ b/src/css/events.module.css
@@ -28,6 +28,7 @@
   align-items: center;
   justify-content: center;
   max-width: 300px;
+  margin: auto;
 }
 .imageBox {
   /* min-height: 300px; */
@@ -48,21 +49,20 @@
   font-size: xx-large;
 }
 .border {
-  padding: 10px; 
+  padding: 10px;
   margin: 10px;
   border: 4px solid transparent;
   border-image: url("../images/Goldenbox.png") 100 stretch;
   min-height: 500px;
   max-width: 900px;
-  
- 
+
   /* border: solid #000;
 border-width: 0 1px; */
 }
-.gridcont{
+.gridcont {
   margin: 80px 0px;
 }
-.merchbutton{
+.merchbutton {
   display: flex;
   justify-content: center;
   align-items: center;
