--- a/src/css/Homepage3.module.css
+++ b/src/css/Homepage3.module.css
@@ -1,3 +1,13 @@
 .bgit{
     background: linear-gradient(180deg, #943066 -7.97%, #943166 -7.94%, #F5C470 108.26%);
 }
+.imagebackgr{
+  background: url("../images/Homepage/window_webcopy.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  z-index: 20;
+  overflow: hidden;
+  width: 100vw;
+  height: 100vh;
+}
