--- a/src/css/merch.module.css
+++ b/src/css/merch.module.css
@@ -4,7 +4,7 @@
   }
   @media screen and (max-width: 1100px) {
     .box {
-      width: 200px;
+      width: 100%;
       height: 200px;
     }
   }
@@ -13,5 +13,5 @@
     overflow: hidden;
   }
   .heightfix {
-    height: 160px;
+    height: 230px;
   }
