--- a/src/css/Homepage2.module.css
+++ b/src/css/Homepage2.module.css
@@ -1,5 +1,5 @@
 .imagebackgr {
-  /* background: url("../images/Homepage/window_webcopy.png"); */
+  background: url("../images/Homepage/window_webcopy.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: 100% 100%;
