--- a/src/css/Homepage1.module.css
+++ b/src/css/Homepage1.module.css
@@ -105,6 +105,7 @@
     opacity: 0.8;
     transform: rotate(90deg);
     margin-left: 92vw;
+    filter: brightness(2);
     cursor: pointer;
   }
 }
@@ -138,7 +139,7 @@
     justify-content: center;
   }
   .zorae img {
-    height: 70vh;
+    height: 56vh;
     width: auto;
     margin: auto;
     max-width: 100vw;
