--- a/src/css/sponsors.module.css
+++ b/src/css/sponsors.module.css
@@ -49,8 +49,9 @@
   position: relative;
   width: 90%;
   max-width: 400px;
-  margin: auto;
+  /* margin: auto; */
   overflow: hidden;
+  margin: 10px auto;
 }
 
 .content .contentOverlay {
