added tenplate for sponsors

--- a/src/css/sponsors.module.css
+++ b/src/css/sponsors.module.css
@@ -44,7 +44,10 @@
   text-align: center;
   margin-bottom: 10px;
 }
-
+.hoveraction:hover {
+  transform: scale(1.5);
+  transition: all 0.4s ease-in-out;
+}
 .content {
   position: relative;
   width: 90%;
